fix: remove unnecessary z-index

--- a/src/app/components/user-list/message-history/message/message.module.scss
+++ b/src/app/components/user-list/message-history/message/message.module.scss
@@ -137,7 +137,6 @@
   position: absolute;
   right: 0;
   top: -20px;
-  z-index: 5;
   margin-top: 10px;
   width: 300%;
   height: 2px;
